// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. comment lead and cartoon - medium 1`] = `
<div>
  <div>
    <div>
      <TileAH
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAI
        tileName="cartoon"
      />
    </div>
  </div>
</div>
`;

exports[`2. daily universal register - medium 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
    />
    <div>
      Daily Universal Register
    </div>
    <TileS />
    <div />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
    />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
    />
    <TileS />
  </div>
</div>
`;

exports[`3. lead one and one - medium 1`] = `
<div>
  <div>
    <div>
      <TileU
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="support"
      />
    </div>
  </div>
</div>
`;

exports[`4. lead one full width - medium 1`] = `
<div>
  <TileR
    tileName="lead"
  />
</div>
`;

exports[`5. lead two no pic and two - medium 1`] = `
<div>
  <div>
    <div>
      <TileX
        tileName="lead1"
      />
      <div />
      <TileY
        tileName="lead2"
      />
    </div>
    <div />
    <div>
      <TileD
        tileName="support1"
      />
      <div />
      <TileZ
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`6. leaders slice - medium 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div>
      <div>
         Leading Articles 
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <TileAG
          tileName="leader2"
        />
      </div>
      <div />
      <div>
        <TileAG
          tileName="leader1"
        />
      </div>
      <div />
      <div>
        <TileAG
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`7. secondary one and four - medium 1`] = `
<div>
  <div>
    <div>
      <TheTimesLogo
        height={40}
        width={40}
      />
    </div>
    <div />
    <div>
      <div>
        <div>
          <TileN
            tileName="secondary"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileO
            tileName="support1"
          />
        </div>
        <div />
        <div>
          <TileO
            tileName="support3"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileO
            tileName="support2"
          />
        </div>
        <div />
        <div>
          <TileO
            tileName="support4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`8. secondary one - medium 1`] = `
<div>
  <TileW
    tileName="secondary"
  />
</div>
`;

exports[`9. secondary four - medium 1`] = `
<div>
  <div>
    <div>
      <TileC
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary2"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary3"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`10. secondary one and columnist - medium 1`] = `
<div>
  <div>
    <div>
      <TileAA
        tileName="secondary"
      />
    </div>
    <div />
    <div>
      <TileAB
        tileName="columnist"
      />
    </div>
  </div>
</div>
`;

exports[`11. secondary two and two - medium 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileV
          tileName="secondary1"
        />
      </div>
      <div />
      <div>
        <TileV
          tileName="secondary2"
        />
      </div>
    </div>
    <div />
    <div>
      <div>
        <TileG
          tileName="support1"
        />
      </div>
      <div />
      <div>
        <TileG
          tileName="support2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`12. lead one and four slice - medium 1`] = `
<div>
  <div>
    <div>
      <TileAC
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAD
        tileName="support1"
      />
      <div />
      <TileAD
        tileName="support2"
      />
      <div />
      <TileAD
        tileName="support3"
      />
      <div />
      <TileAD
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`13. secondary two no pic and two - medium 1`] = `
<div>
  <div>
    <div>
      <TileAE
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileAE
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
    <div>
      <TileG
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileG
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`14. puzzle - medium 1`] = `
<div>
  <div>
    <TileAK
      id="0"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
    <TileAK
      id="1"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
    <TileAK
      id="2"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
  </div>
</div>
`;

exports[`15. comment lead and cartoon - wide 1`] = `
<div>
  <div>
    <div>
      <TileAH
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAI
        tileName="cartoon"
      />
    </div>
  </div>
</div>
`;

exports[`16. daily universal register - wide 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
    />
    <div>
      Daily Universal Register
    </div>
    <TileS />
    <div />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
    />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
    />
    <TileS />
  </div>
</div>
`;

exports[`17. lead one and one - wide 1`] = `
<div>
  <div>
    <div>
      <TileU
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="support"
      />
    </div>
  </div>
</div>
`;

exports[`18. lead one full width - wide 1`] = `
<div>
  <TileR
    tileName="lead"
  />
</div>
`;

exports[`19. lead two no pic and two - wide 1`] = `
<div>
  <div>
    <div>
      <TileX
        tileName="lead1"
      />
      <div />
      <TileY
        tileName="lead2"
      />
    </div>
    <div />
    <div>
      <TileD
        tileName="support1"
      />
      <div />
      <TileZ
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`20. leaders slice - wide 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div>
      <div>
         Leading Articles 
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <TileAG
          tileName="leader2"
        />
      </div>
      <div />
      <div>
        <TileAG
          tileName="leader1"
        />
      </div>
      <div />
      <div>
        <TileAG
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`21. secondary one and four - wide 1`] = `
<div>
  <div>
    <div>
      <TheTimesLogo
        height={40}
        width={40}
      />
    </div>
    <div />
    <div>
      <div>
        <div>
          <TileN
            tileName="secondary"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileO
            tileName="support1"
          />
        </div>
        <div />
        <div>
          <TileO
            tileName="support3"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileO
            tileName="support2"
          />
        </div>
        <div />
        <div>
          <TileO
            tileName="support4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`22. secondary one - wide 1`] = `
<div>
  <TileW
    tileName="secondary"
  />
</div>
`;

exports[`23. secondary four - wide 1`] = `
<div>
  <div>
    <div>
      <TileC
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary2"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary3"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`24. secondary one and columnist - wide 1`] = `
<div>
  <div>
    <div>
      <TileAA
        tileName="secondary"
      />
    </div>
    <div />
    <div>
      <TileAB
        tileName="columnist"
      />
    </div>
  </div>
</div>
`;

exports[`25. secondary two and two - wide 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileV
          tileName="secondary1"
        />
      </div>
      <div />
      <div>
        <TileV
          tileName="secondary2"
        />
      </div>
    </div>
    <div />
    <div>
      <div>
        <TileG
          tileName="support1"
        />
      </div>
      <div />
      <div>
        <TileG
          tileName="support2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`26. lead one and four slice - wide 1`] = `
<div>
  <div>
    <div>
      <TileAC
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAD
        tileName="support1"
      />
      <div />
      <TileAD
        tileName="support2"
      />
      <div />
      <TileAD
        tileName="support3"
      />
      <div />
      <TileAD
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`27. secondary two no pic and two - wide 1`] = `
<div>
  <div>
    <div>
      <TileAE
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileAE
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
    <div>
      <TileG
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileG
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`28. puzzle - wide 1`] = `
<div>
  <div>
    <TileAK
      id="0"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
    <TileAK
      id="1"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
    <TileAK
      id="2"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
  </div>
</div>
`;

exports[`29. comment lead and cartoon - huge 1`] = `
<div>
  <div>
    <div>
      <TileAH
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAI
        tileName="cartoon"
      />
    </div>
  </div>
</div>
`;

exports[`30. daily universal register - huge 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
    />
    <div>
      Daily Universal Register
    </div>
    <TileS />
    <div />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
    />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
    />
    <TileS />
  </div>
</div>
`;

exports[`31. lead one and one - huge 1`] = `
<div>
  <div>
    <div>
      <TileU
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="support"
      />
    </div>
  </div>
</div>
`;

exports[`32. lead one full width - huge 1`] = `
<div>
  <TileR
    tileName="lead"
  />
</div>
`;

exports[`33. lead two no pic and two - huge 1`] = `
<div>
  <div>
    <div>
      <TileX
        tileName="lead1"
      />
      <div />
      <TileY
        tileName="lead2"
      />
    </div>
    <div />
    <div>
      <TileD
        tileName="support1"
      />
      <div />
      <TileZ
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`34. leaders slice - huge 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div>
      <div>
         Leading Articles 
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <TileAG
          tileName="leader2"
        />
      </div>
      <div />
      <div>
        <TileAG
          tileName="leader1"
        />
      </div>
      <div />
      <div>
        <TileAG
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`35. secondary one and four - huge 1`] = `
<div>
  <div>
    <div>
      <TheTimesLogo
        height={40}
        width={40}
      />
    </div>
    <div />
    <div>
      <div>
        <div>
          <TileN
            tileName="secondary"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileO
            tileName="support1"
          />
        </div>
        <div />
        <div>
          <TileO
            tileName="support3"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileO
            tileName="support2"
          />
        </div>
        <div />
        <div>
          <TileO
            tileName="support4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`36. secondary one - huge 1`] = `
<div>
  <TileW
    tileName="secondary"
  />
</div>
`;

exports[`37. secondary four - huge 1`] = `
<div>
  <div>
    <div>
      <TileC
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary2"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary3"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`38. secondary one and columnist - huge 1`] = `
<div>
  <div>
    <div>
      <TileAA
        tileName="secondary"
      />
    </div>
    <div />
    <div>
      <TileAB
        tileName="columnist"
      />
    </div>
  </div>
</div>
`;

exports[`39. secondary two and two - huge 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileV
          tileName="secondary1"
        />
      </div>
      <div />
      <div>
        <TileV
          tileName="secondary2"
        />
      </div>
    </div>
    <div />
    <div>
      <div>
        <TileG
          tileName="support1"
        />
      </div>
      <div />
      <div>
        <TileG
          tileName="support2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`40. lead one and four slice - huge 1`] = `
<div>
  <div>
    <div>
      <TileAC
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAD
        tileName="support1"
      />
      <div />
      <TileAD
        tileName="support2"
      />
      <div />
      <TileAD
        tileName="support3"
      />
      <div />
      <TileAD
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`41. secondary two no pic and two - huge 1`] = `
<div>
  <div>
    <div>
      <TileAE
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileAE
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
    <div>
      <TileG
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileG
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`42. puzzle - huge 1`] = `
<div>
  <div>
    <TileAK
      id="0"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
    <TileAK
      id="1"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
    <TileAK
      id="2"
      image={
        Object {
          "crop11": null,
          "crop169": null,
          "crop23": null,
          "crop32": Object {
            "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
          },
          "crop45": null,
          "crops": Array [],
          "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
        }
      }
      title="Times Concise medium No 7881"
      url="/crossword/123"
    />
  </div>
</div>
`;
